--- a/PRN231-Group3/LandingPage/Views/Landing/Thanks.cshtml
+++ b/PRN231-Group3/LandingPage/Views/Landing/Thanks.cshtml
@@ -23,7 +23,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="#page-top">YOOOOO</a>
+            <a class="navbar-brand" href="#page-top">PRN231 - Group 3</a>
             <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
@@ -41,7 +41,7 @@
             <!-- Masthead Avatar Image-->
             <img class="masthead-avatar mb-5" src="~/asset/assets/img/avataaars.svg" alt="..." />
             <!-- Masthead Heading-->
-            <h1 class="masthead-heading text-uppercase mb-0">Thanks for contact!</h1>
+            <h1 class="masthead-heading text-uppercase mb-0">Thanks for your time!</h1>
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
@@ -49,10 +49,10 @@
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Masthead Subheading-->
-            <p class="masthead-subheading font-weight-light mb-0">YOOOOOOOOOOOOOOO</p>
+            <p class="masthead-subheading font-weight-light mb-0">We will be in touch with you soon.</p>
         </div>
     </header>
-    <!-- Footer-->
+    <!-- Footer-->@*
     <footer class="footer text-center">
         <div class="container">
             <div class="row">
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer>*@
 
     <!-- Portfolio Modals-->
     <!-- Portfolio Modal 1-->
